k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitor-counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visitor-counter
  template:
    metadata:
      labels:
        app: visitor-counter
    spec:
      containers:
      - name: visitor-counter
        image: visitorcounteracr.azurecr.io/visitor-counter:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        startupProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 18

        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 5

        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
