k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-counter-service
  labels:
    app.kubernetes.io/name: visitor-counter
spec:
  selector:
    app: visitor-counter
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
